# pos-py

./: .gitignore  README.md  design-readme.md  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: ea5775b6bdea_initial_migration.py
backend/app/: main.py
backend/app/api/: auth.py  products.py  sales.py  stock.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  product.py  sale.py  stock.py  user.py
backend/app/repositories/: __init__.py  base.py  product.py  sale.py  stock.py  user.py
backend/app/schemas/: __init__.py  auth.py  product.py  sale.py  stock.py
backend/app/services/: __init__.py  auth.py  product.py  sale.py  stock.py
backend/tests/: conftest.py  test_auth.py  test_integration.py  test_main.py  test_main_simple.py
docker/: docker-compose.yml
frontend/: .gitignore  rxconfig.py
frontend/frontend/: api_client.py  frontend.py
pos_py/: __init__.py
shared/models/: __init__.py  base.py  enums.py
